11-kubernetes-configmaps-secrets-ingress/11-host-ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yatri-host-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.yatri.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-api
                port:
                  number: 80
